Closed Bug 517163 Opened 16 years ago Closed 16 years ago

[Flashblock] Unexpected error = NS_ERROR_UNEXPECTED @ return Components.lookupMethod(untrustedObject, methodName).apply(untrustedObject, arguments);

Categories

(Core :: XPConnect, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: philip.chee, Assigned: mrbkap)

References

Details

(Keywords: regression)

Attachments

(1 file)

[please move to a more appropriate bugzilla component] Flashblock stops working in the latest Minefield nightlies. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20090916 Minefield/3.7a1pre Flashblock 1.5.11.2 Error: Unexpected error = NS_ERROR_UNEXPECTED Source file: chrome://flashblock/content/flashblock.xml Line: 21 Line 21 is: return fun.apply(untrustedObject, arguments); Code: //From Jesse's XPCNativeWrapper: http://mavra.perilith.com/~luser/content/native.js function nativeMethod(untrustedObject, methodName) { // happier stack traces and faster multiple calls var fun = Components.lookupMethod(untrustedObject, methodName); return function() { return fun.apply(untrustedObject, arguments); } }
Note: turning JIT (chrome/content) on/off doesn't affect this problem. Works: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20090914 Minefield/3.7a1pre Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20090915 Minefield/3.7a1pre Fails: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20090916 Minefield/3.7a1pre Could Bug 516102 have casued this, Blake?
Yes.
Component: XPCOM → XPConnect
QA Contact: xpcom → xpconnect
Blocks: 516102
Attached patch FixSplinter Review
I haven't updated my brain to work in the new slimwrapper world yet. I'd forgotten that we have to morph when we *really* want an XPCWrappedNative. Like, say, when we're wrapping in an XPCNativeWrapper.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #401323 - Flags: superreview?(jst)
Attachment #401323 - Flags: review?(jst)
Attachment #401323 - Flags: superreview?(jst)
Attachment #401323 - Flags: superreview+
Attachment #401323 - Flags: review?(jst)
Attachment #401323 - Flags: review+
A Mochitest or something would be awesome :)
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: