Bug 517163 - Add missing call to morph slim wrappers when wrapping them in XPCNativeWrappers. r+sr=jst